--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body {
     gap: 10px;
 }
 
+.video-title {
+    margin-bottom: 12px;
+}
+
 .channel-icon {
     width: 100%;
     border-radius: 50%;
@@ -26,7 +30,6 @@ body {
 
 .video-title, .channel-name-and-date {
     color: white;
-    line-height: 25px;
     font-family: 'Roboto', sans-serif;
 }
 
