--- a/styles/video-section.css
+++ b/styles/video-section.css
@@ -1,9 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(0,0,0);
-}
-
 .thumbnail-section {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Creates 3 equal columns */
@@ -29,10 +23,10 @@ body {
 }
 
 .video-title, .channel-name-and-date {
-    color: white;
+    color: rgb(0,0,0);
     font-family: 'Roboto', sans-serif;
 }
 
 .channel-name-and-date {
-    color: rgb(170, 170, 170)
+    color: rgb(96, 96, 96)
 }
