--- a/styles/header.css
+++ b/styles/header.css
@@ -4,11 +4,12 @@
     justify-content: space-between;
     height: 55px;
     align-items: center;
+    border: 1px solid rgb(204, 204, 204);
 }
 
 .left-section {
     margin-left: 10px;
-    margin-right: 100px;
+    margin-right: 150px;
 }
 
 .youtube-logo {
@@ -44,20 +45,20 @@
 }
 
 .icon {
-    width: 30px;
-    height: 30px;
-    margin-right: 15px;
+    width: 25px;
+    height: 25px;
+    margin-right: 25px;
     cursor: pointer;
 }
 
 .search-icon {
-    padding-right: 15px;
-    padding-left: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 7.5px;
+    padding-bottom: 7.5px;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border: 1px solid rgb(204, 204, 204);
 }
 
