--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,11 @@
     height: 55px;
     align-items: center;
     border: 1px solid rgb(204, 204, 204);
+    position: fixed;
+    background-color: #FFFFFF;
+    top: 0px;
+    left: 0px;
+    right: 0px;
 }
 
 .left-section {
