--- a/styles/general.css
+++ b/styles/general.css
@@ -5,4 +5,10 @@
 
 body {
     background-color: rgb(247, 247, 247);
+    font-family: 'Roboto', sans-serif;
+}
+
+p {
+    text-align: center;
+    font-size: 0.6rem;
 }
