--- a/styles/video-section.css
+++ b/styles/video-section.css
@@ -1,17 +1,35 @@
 .thumbnail-section {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Creates 3 equal columns */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Creates 3 equal columns */
     gap: 15px;
-    padding-left: 15px;
+    padding-left: 80px;
     padding-right: 15px;
-    padding-top: 25px;
+    padding-top: 80px;
     padding-bottom: 25px;
-    margin-top: 55px;
+    z-index: 800;
 }   
     
 .thumbnail-image {
     width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
 }
+
+.thumbnail {
+    position: relative;
+}
+
+.video-time {
+    font-family: 'Roboto', sans-serif;
+    background-color: black;
+    color: white ;
+    position: absolute;
+    bottom: 10px;
+    right: 6px;
+    font-size: 0.8rem;
+    padding: 2px;
+}
+
 .video-info-grid {
     display: grid;
     grid-template-columns: 40px 1fr;
